<resources>
    <string name="app_name">bloomerBarber</string>
    <string-array name="offers" font="@font/aclonica">
        <item>Haircuts</item>
        <item>Saloons</item>
        <item>Spa</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_mobile_number_for_otp_verification">Enter Mobile Number for otp verification</string>
    <string name="get_otp">get otp</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="confirm_otp">Confirm OTP</string>
    <string name="hair_styling">Hair Styling</string>
    <string name="body_grooming">Body Grooming</string>
    <string name="hair_colouring">Hair Colouring</string>
    <string name="make_and_transformation">Make And Transformation</string>
    <string name="spa_and_recreation">Spa And Recreation</string>

    <string-array name="search_hints" font="@font/aclonica">
        <item>Search by saloon names</item>
        <item>Search by services</item>
        <item>Search by spa names</item>
        <item>Search by artists</item>
    </string-array>
    <string-array name="artists">

        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
    </string-array>
</resources>