<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ServiceAdderActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/primary"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                app:layout_constraintVertical_bias="0.0">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/rounded_card_back" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:elevation="5dp"
                android:fontFamily="@font/open_sans_light"
                android:text="Add a new service"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/fragment_services_manager_order_animation"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="32dp"

                android:elevation="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintVertical_bias="0.0"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/adder_button" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="75dp"
                android:layout_marginEnd="24dp"
                android:background="@android:drawable/dialog_holo_light_frame"
                app:cardCornerRadius="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintVertical_bias="0.0">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/activity_service_adder_service_name"
                        android:layout_width="0dp"
                        android:layout_height="75dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="75dp"
                        android:layout_marginEnd="32dp"
                        android:background="@drawable/button_bg_minimal"
                        android:gravity="center"
                        android:hint="Service Name"
                        android:textColor="#000000"
                        android:textColorHint="#000000"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <EditText
                        android:id="@+id/activity_service_adder_cost"
                        android:layout_width="0dp"
                        android:layout_height="75dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="32dp"
                        android:background="@drawable/button_bg_minimal"
                        android:gravity="center"
                        android:hint="Cost"
                        android:textColorHint="#000000"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/activity_service_adder_service_name"
                        app:layout_constraintVertical_bias="0.0" />

                    <EditText
                        android:id="@+id/activity_service_adder_average_time"
                        android:layout_width="0dp"
                        android:layout_height="75dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="32dp"
                        android:background="@drawable/button_bg_minimal"
                        android:gravity="center"
                        android:hint="Average Time"
                        android:textColorHint="#000000"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/activity_service_adder_cost"
                        app:layout_constraintVertical_bias="0.0" />

                    <EditText
                        android:id="@+id/activity_service_adder_description"
                        android:layout_width="0dp"
                        android:layout_height="75dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="24dp"
                        android:background="@drawable/button_bg_minimal"
                        android:gravity="center"
                        android:hint="Description"
                        android:maxLength="200"
                        android:textColorHint="#000000"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/activity_service_adder_average_time"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="0dp"

                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:gravity="center"
                        android:padding="6dp"
                        android:text="Please Select the Categories to which
service belongs"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/activity_service_adder_description" />


                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:background="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        app:layout_constraintVertical_bias="0.0">

                        <LinearLayout

                            android:background="@color/white"
                            android:id="@+id/linearLayout3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="0dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="16dp"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="5dp">


                            <CheckBox
                                android:id="@+id/activity_service_adder_category_hair_styling"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:background="@drawable/textview_back"
                                android:padding="8dp"
                                android:text="@string/hair_styling"

                                android:textStyle="bold" />

                            <CheckBox
                                android:id="@+id/activity_service_adder_category_body_grooming"
                                android:layout_width="wrap_content"

                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:background="@drawable/textview_back"
                                android:padding="8dp"
                                android:text="@string/body_grooming"

                                android:textStyle="bold" />

                            <CheckBox
                                android:id="@+id/activity_service_adder_category_hair_colouring"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:background="@drawable/textview_back"
                                android:padding="8dp"
                                android:text="@string/hair_colouring"

                                android:textStyle="bold" />

                            <CheckBox
                                android:id="@+id/activity_service_adder_category_make_and_transformation"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:background="@drawable/textview_back"
                                android:padding="8dp"
                                android:text="@string/make_and_transformation"

                                android:textStyle="bold" />

                            <CheckBox
                                android:id="@+id/activity_service_adder_category_spa_and_recreation"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:background="@drawable/textview_back"
                                android:padding="8dp"
                                android:text="@string/spa_and_recreation"

                                android:textStyle="bold" />


                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/activity_service_adder_save_button"
                        android:layout_width="0dp"
                        android:layout_height="75dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="24dp"
                        android:background="@drawable/button_back_green"
                        android:gravity="center"
                        android:text="Save"
                        android:textColor="#000000"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cardView14" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>